--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/fbonhomm/Simple-LZSS
+    working_directory: /go/src/github.com/fbonhomm/LZSS
     docker:
       - image: circleci/golang:1.12
     steps:
