--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,16 +3,16 @@ jobs:
   build:
     working_directory: /go/src/github.com/fbonhomm/LZSS
     docker:
-      - image: circleci/golang:1.12
+      - image: circleci/golang:1.13
     steps:
       - checkout
       - run:
           name: install golangci-lint
-          command: 'go get -u github.com/golangci/golangci-lint/cmd/golangci-lint;go get github.com/stretchr/testify'
+          command: "GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.18.0; go get github.com/stretchr/testify"
       - run:
           name: linter
-          command: '/go/bin/golangci-lint run ./source'
+          command: "/go/bin/golangci-lint run ./source"
       - run:
           name: test
-          command: 'go test -v ./test'
+          command: "go test -v ./test"
 
